fix: Fix font-size of horizontal stepper on mobile view.

--- a/store/src/styles/sections/select-delivery.scss
+++ b/store/src/styles/sections/select-delivery.scss
@@ -232,6 +232,10 @@
             font-weight: 500;
             font-size: 1.25rem;
             color: rgba(51, 51, 51, 0.4);
+
+            @media (max-width: 768px) {
+               font-size: 1rem;
+            }
          }
          &--active {
             background-color: var(--hern-accent);
